Fix up alignment of copy button

--- a/app/stylesheets/builtin-pages/library.less
+++ b/app/stylesheets/builtin-pages/library.less
@@ -513,6 +513,13 @@
       .url:hover {
         text-decoration: underline;
       }
+
+      .url-info {
+
+        .btn {
+          padding: 0 2px;
+        }
+      }
     }
   }
 
